src/content/docs/versions/http-api/0.6.x/outputs/rtmp.mdx
---
title: RTMP client
slug: http-api/0.6.x/http-api/outputs/rtmp
---

import CollapsibleDetails from '@components/CollapsibleDetails.astro';

An output type that allows streaming video and audio from Smelter over RTMP.

| Media Type | Supported Codecs |
| :--- | :--- |
| **Video** | `H.264`, `VP8`\*, `VP9`\* |
| **Audio** | `AAC`, `Opus`\* |

<small>*\* E-RTMP feature. The destination server needs to support E-RTMP.*</small>

The RTMP output connection is configured using a URL.\
Format: `rtmp[s]://<host>[:<port>]/<app>/<stream_key>`

The port defaults to `1935` for RTMP and `443` for RTMPS.

## Usage

To use RTMP Output you need to register it first.

<CollapsibleDetails summaryTitle="Example request" open>
  ```http
  POST: /api/output/:output_id/register
  Content-Type: application/json

  {
    "type": "rtmp_client",
    "url": "https://example.com/rtmp",
    "video": {
      "resolution": { "width": 1280, "height": 720 },
      "encoder": { "type": "ffmpeg_h264" },
      "initial": {
        "root": {
          "type": "view"
        }
      }
    },
    "audio": {
      "encoder": { "type": "aac" },
      "channels": "stereo",
      "initial": {
        "inputs": [{ "input_id": "input_1" }]
      }
    }
  }
  ```
</CollapsibleDetails>

See [HTTP Routes](/http-api/0.6.x/routes#outputs-configuration) documentation to learn more about managing outputs.

## Reference

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type RtmpClientOutput = {
    type: "rtmp_client";
    url: string;
    video?: VideoOptions;
    audio?: AudioOptions;
  }
  ```
</CollapsibleDetails>

## Properties

### url

RTMP endpoint url.

* **Type**: `string`

***

### video

Video track configuration.

* **Type**: [`VideoOptions`](#videooptions)

***

### audio

Audio track configuration.

* **Type**: [`AudioOptions`](#audiooptions)

## VideoOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type VideoOptions = {
    resolution: {
      width: u32;
      height: u32;
    };
    send_eos_when?: OutputEndCondition;
    encoder: VideoEncoderOptions;
    initial: { root: Component; };
  }
  ```
</CollapsibleDetails>

### Properties

#### resolution

Output resolution in pixels.

* **Type**: `{ width: u32; height: u32; }`

***

#### send\_eos\_when

Condition for termination of the output stream based on the input streams states. If output includes both audio and video streams, then EOS needs to be sent for every type.

* **Type**: [`OutputEndCondition`](#outputendcondition)

***

#### encoder

Video encoder options.

* **Type**: [`VideoEncoderOptions`](#videoencoderoptions)

***

#### initial

Root of a component tree/scene that should be rendered for the output. Use [`update_output`](/http-api/0.6.x/routes#update-output) request to update this value after registration.

* **Type**: `{ root: Component; }`

## VideoEncoderOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type VideoEncoderOptions =
    | ({ type: "ffmpeg_h264"; } & FfmpegH264EncoderOptions)
    | ({ type: "ffmpeg_vp8"; } & FfmpegVp8EncoderOptions)
    | ({ type: "ffmpeg_vp9"; } & FfmpegVp9EncoderOptions)
    | ({ type: "vulkan_h264"; } & VulkanH264EncoderOptions)
  ```
</CollapsibleDetails>

Configuration for the video encoder, based on the selected codec. Visit encoder documentation to learn more.

* [FFmpeg H264](/http-api/0.6.x/outputs/encoders/ffmpeg-h264)
* [FFmpeg VP8](/http-api/0.6.x/outputs/encoders/ffmpeg-vp8)
* [FFmpeg VP9](/http-api/0.6.x/outputs/encoders/ffmpeg-vp9)
* [Vulkan H264](/http-api/0.6.x/outputs/encoders/vulkan-h264)

## AudioOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type AudioOptions = {
    mixing_strategy?: "sum_clip" | "sum_scale";
    send_eos_when?: OutputEndCondition;
    encoder: AudioEncoderOptions;
    channels?: "mono" | "stereo";
    initial: { inputs: InputAudio[]; };
  }
  ```
</CollapsibleDetails>

### Properties

#### mixing\_strategy

Specifies how audio should be mixed.

* **Type**: `"sum_clip" | "sum_scale"`
* **Default value**: `"sum_clip"`
* **Supported values**:
  * `sum_clip` - First, the input samples are summed. If the result exceeds the i16 PCM range, it is clipped.
  * `sum_scale` - First, the input samples are summed. If the result exceeds the i16 PCM range, the summed samples are scaled down by a factor to fit within the range.

***

#### send\_eos\_when

Condition for termination of the output stream based on the input streams states. If output includes both audio and video streams, then EOS needs to be sent for every type.

* **Type**: [`OutputEndCondition`](#outputendcondition)

***

#### encoder

Audio encoder options.

* **Type**: [`AudioEncoderOptions`](#audioencoderoptions)

#### channels

Channels configuration

* **Type**: `"mono" | "stereo"`
* **Default value**: `"stereo"`
* **Supported values**:
  * `mono` - Mono audio (single channel).
  * `stereo` - Stereo audio (two channels).

#### initial

Initial audio mixer configuration for output.

* **Type**: `{ inputs: InputAudio[]; }`

## AudioEncoderOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type AudioEncoderOptions =
    | ({ type: "aac"; } & AacEncoderOptions)
    | ({ type: "opus"; } & OpusEncoderOptions);
  ```
</CollapsibleDetails>

Configuration for the audio encoder. Visit encoder documentation to learn more.

* [AAC](/http-api/0.6.x/outputs/encoders/aac)
* [Opus](/http-api/0.6.x/outputs/encoders/opus)

## InputAudio

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type InputAudio = {
    input_id: string;
    volume?: f32;
  }
  ```
</CollapsibleDetails>

### Properties

#### input\_id

ID of an input. It identifies a stream registered using a [register input](/http-api/0.6.x/routes#register-input) method.

* **Type**: `string`

#### volume

Input volume in range `[0, 2]`

* **Type**: `f32`
* **Default value**: `1.0`
* **Supported values**: `[0, 2]`

## OutputEndCondition

This type defines when end of an input stream should trigger end of the output stream. Only one of those fields can be set at the time.
Unless specified otherwise the input stream is considered finished/ended when:

* TCP connection was dropped/closed.
* RTCP Goodbye packet (`BYE`) was received.
* Mp4 track has ended.
* Input was unregistered already (or never registered).

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type OutputEndCondition = {
    any_of?: string[];
    all_of?: string[];
    any_input?: bool;
    all_inputs?: bool;
  }
  ```
</CollapsibleDetails>

### Properties

#### any\_of

List of the input streams. The output stream will terminate if any stream in the list finishes.

* **Type**: `string[]`

***

#### all\_of

List of the input streams. The output stream will terminate when all streams in the list finish.

* **Type**: `string[]`

***

#### any\_input

Terminate the output stream if any of the input streams end, including streams added after the output was registered. Notably, the output stream will not terminate if no inputs were ever connected.

* **Type**: `bool`

***

#### all\_inputs

Terminate the output stream only when all input streams have finished. Notably, the output stream will terminate if no inputs were ever connected.

* **Type**: `bool`
